syntax = "proto3";

service Auth {
  rpc Auth(AuthRequest) returns (AuthResponse) {}
}

message AuthRequest {
  string code = 1; // OAuth code
}

message AuthResponse {
  int32 status = 2; // 1 for ok, 2 for invalid
  string token = 3; // non-empty for valid access token
}