syntax = "proto3";

service User {
    rpc Create(UserCreateRequest) returns (UserCreateResponse) {}
}

message UserCreateRequest {
    string studentId = 1;
    string studentName = 2;
}

message UserCreateResponse {
    enum Status {
        UNKNOWN = 0;
        EMPTY_PARAM = -1;
        SUCCESS = 1;
        USER_EXIST = 2;
    }
    Status status = 1;
    int32 userId = 2;
}